# Halide

./: .gitignore  CMakeLists.txt  FindJPEG.cmake  Makefile  README_cmake.md  README_rungen.md  halide.cmake  halide_command.txt  priv_build.sh
apps/: CMakeLists.txt
apps/linear_algebra/benchmarks/: cblas_benchmarks.cpp
apps/linear_algebra/tests/: test_halide_blas.cpp
apps/support/: Makefile.inc
apps/wavelet/: CMakeLists.txt
apps/wavelet2d/: CMakeLists.txt  Makefile  README.md  daubechies_generator.cpp  haar_generator.cpp  inverse_daubechies_generator.cpp  inverse_haar_generator.cpp  wavelet2d.cpp
bazel/: BUILD
cmake/Modules/: FindBPG.cmake
dependencies/: CMakeLists.txt
dependencies/bpg/: CMakeLists.txt
packaging/: HalideConfig.cmake
packaging/common/: HalideConfig.cmake
src/: HexagonOptimize.cpp
src/autoschedulers/adams2019/: autotune_loop.sh
test/correctness/: CMakeLists.txt  debug_to_file.cpp
test/generator/: tiled_blur_aottest.cpp
tools/: CMakeLists.txt  RunGenMain.cpp  halide_image_io.h
tutorial/: CMakeLists.txt  lesson_02_input_image.cpp  lesson_12_using_the_gpu.cpp
tutorial/images/: rgb.bpg
util/: HalideTraceDump.cpp  HalideTraceViz.cpp
